# CLOUD

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  dockerfile  pyproject.toml
src/core/: bcrypt.py  database.py
src/core/board/: seeds.py
src/core/materials/: __init__.py  material.py
src/core/orders/: __init__.py  order.py
src/core/providers/: __init__.py  provider.py
src/web/: __init__.py  config.py  error.py  functions.py  routes.py
src/web/api/: api_auth.py  api_bd.py  api_order.py
src/web/controllers/: auth.py  order.py
src/web/helpers/: api_helpers.py  application.py  auth.py  paging.py  token.py
src/web/schemas/: order_schema.py
src/web/templates/: error.html  home.html  layout.html
src/web/templates/order/: index.html
static/: swagger.json
