[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Luciano Lautaro Rodriguez"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-session = "^0.5.0"
flask-mail = "^0.9.1"
flask-wtf = "^1.2.1"
marshmallow = "^3.20.1"
email-validator = "^2.0.0.post2"
flask-jwt-extended = "^4.5.3"
flask-cors = "^4.0.0"
authlib = "^1.2.1"
requests = "^2.31.0"
greenlet = "^3.1.1"
jsonify = "^0.5"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flask-shell-ipython = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
